# cargo-bundler

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cargo_parser.rs  crate_path_injecter.rs  flattener.rs  lib.rs  linker.rs  main.rs
tests/: goldenfile.rs
tests/examples/single-binaries/complicated/: Cargo.toml
tests/examples/single-binaries/deeper-lib-use-path/: Cargo.toml  bundled.rs
tests/examples/single-binaries/deeper-lib-use-path/src/: internal.rs  main.rs
tests/examples/single-binaries/no_mod_file/: Cargo.toml
tests/examples/single-binaries/no_mod_file/src/: main.rs
tests/examples/single-binaries/simple/: Cargo.toml
tests/examples/single-binaries/simple/src/: main.rs
tests/goldenfiles/: deeper-lib-use-path.rs  no_mod_file.rs  simple.rs
